# RT2019

./: .gitignore  RT2019.sln
RT2019/: Camera.h  RT2019.vcxproj  RT2019.vcxproj.filters  Ray.cpp  Ray.h  World.cpp  World.h  rtmain.cpp
RT2019/Display/: displaywindow.cpp  displaywindow.h  film.h
RT2019/Tracer/: cudarenderkernel.h  renderkernel.cu  tracer.cpp  tracer.h
RT2019/Utils/: cuda_helpers.cpp  cuda_helpers.h  spectrum.h
RT2019/geometry/: GeometricObject.h  aabb.cpp  aabb.h  ascii_ply.cpp  ascii_ply.h  bvh.cpp  bvh.h  commonheader.h  geometry.cpp  geometrykernels.cu  mesh.cpp  mesh.h  morton.cpp  morton.h  space.h  triangle.cpp  triangle.h
RT2019/tests/: load_bunny.h
RT2019/typename/: typename.h
test_without_cuda/: CMakeLists.txt  cuda_replacement.cpp  cuda_runtime.cpp  cuda_runtime.h  helper_cuda.h  inspector.h  testmain.cpp
